# cownting

./: .dockerignore  .env.example  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  futurework.md  pyproject.toml  release.md  requirements.txt
.github/workflows/: tests.yml
alerts/: watch.py
config/: cownting.example.yaml  cownting.prod.yaml
cownting/: __init__.py  api.py  auth.py  cli.py  config.py  db.py  features.py  localize_worker.py  pipeline.py  uploads.py
cownting/app/: __init__.py  dashboard.py
cownting/app/assets/: cownting.css
cownting/calib/: __init__.py  fence.py  homography.py  joint.py  tiepoints.py  warp.py
cownting/detect/: __init__.py  base.py  geometry.py  grounded_sam2.py  overlay.py  pose.py  yolo_seg.py
cownting/eval/: __init__.py  spotcheck.py
cownting/finetune/: __init__.py  dataset.py  evaluate.py  export_cvat.py  select.py  train.py
cownting/ingest/: __init__.py  capture_time.py  video.py
cownting/scene/: __init__.py  panels.py  quality.py  regions.py
docs/: COUNT_AREAS.md  SETUP_WINDOWS.md
docs/roadmap/: M1_pose_posture.md  M2_shadow_segmentation.md  ROADMAP.md  interactive_crossfilter.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AreaMap.tsx  AreaTrends.tsx  CalibrationNudge.tsx  CameraDetail.tsx  CameraSegStack.tsx  CountsChart.tsx  CoveragePanel.tsx  CrossFilter.tsx  CrossFilterSummary.tsx  DatasetPicker.tsx  DaySeries.tsx  DeterminationBar.tsx  DimensionPicker.tsx  FenceEditor.tsx  FenceLineCollector.tsx  GroundLineCollector.tsx  Heatmap.tsx  ImageClicker.tsx  JointCalibratePanel.tsx  KpiPanel.tsx  LineCollector.tsx  MiniTrend.tsx  PanelCollector.tsx  PanelOrthoEditor.tsx  PointCrop.tsx  PostureChart.tsx  PostureTrend.tsx  RatioStrips.tsx  (+7 more)
tests/: __main__.py  test_api.py  test_auth.py  test_capture_time.py  test_count_areas.py  test_dataset_area_scoping.py  test_db_concurrency.py  test_fence.py  test_localize_worker.py  test_panel_areas.py  test_panels.py  test_pose.py  test_regions.py  test_shelter.py  test_video.py  test_warp.py  test_whole_day.py
(+15 files in other folders)
