[project]
name = "cownting"
version = "0.1.0"
description = "Offline cow / solar-field analysis pipeline (segmentation + spatial mapping)"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
packages = [
    "cownting",
    "cownting.detect",
    "cownting.ingest",
    "cownting.eval",
    "cownting.scene",
    "cownting.finetune",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
# Open-vocabulary bootstrap labeler + annotation round-trip (Stage 1b).
# sam2 is not on PyPI — install it separately (see docs/SETUP_WINDOWS.md).
label = ["fiftyone>=1.0", "transformers>=4.41"]
# Fine-tuning uses the core ultralytics dep; this pulls plotting/eval extras.
finetune = ["matplotlib>=3.7"]
# Test-only: fastapi's TestClient (test_api / test_auth) requires httpx. CI
# installs this so the HTTP tests run; not needed in the runtime image.
test = ["httpx>=0.27"]

[project.scripts]
cownting = "cownting.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
